--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ dist
 dist-ssr
 *.local
 backend/src/bootstrap.js
+/frontend/src/store/useAuthStore wto firebase email.js
 
 # Editor directories and files
 .vscode/*
