--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.8.1",
     "nodemailer": "^7.0.6",
     "socket.io": "^4.8.1",
+    "validator": "^13.15.15",
     "web-push": "^3.6.7"
   },
   "devDependencies": {
